# DistFuser

./: .gitignore  README.md  pyproject.toml
configs/hidream/: hidream_dev_service.yaml  hidream_fast_service.yaml  hidream_full_service.yaml
distfuser/: __init__.py  engine.py  workflow.py
distfuser/entrypoints/: __init__.py  http_server.py
distfuser/utils/: __init__.py  logger.py  request.py
distfuser/worker/: __init__.py  base_worker.py  hidream_worker.py
distfuser/worker/hidream_patch/: __init__.py  hidream_pipeline.py  xdit_context_parallel.py
examples/: hidream_example.py  run_hidream.sh
examples/service/: curl_hidream_service.sh  hidream_http_service.py
examples/worker/: hidream_example.py  run_hidream.sh
